cleaning up the physX classes